done: add new func to create and get detail for product